# cccc_clash_test

./: .gitignore  ARCHITECTURE.md  CODE_REVIEW_SUMMARY.md  FOREMAN_TASK.md  IMPLEMENTATION_STATUS.md  Makefile  PROJECT.md  check_implementation.sh  go.mod  go.sum  main.go
.cccc/settings/: cli_profiles.yaml  foreman.yaml  telegram.yaml
.cccc/state/: session.json
.claude/: history.jsonl  settings.json
.claude/debug/: 226fa44d-7e46-4d54-a316-eb5a2fed4d73.txt  242c3785-4ff7-4a65-a583-f5b01c4f17ff.txt  26eab740-0669-4bfb-b9df-9c8b28255ace.txt  6aaf9681-d4f0-4de7-8164-5b7c0dfbab9d.txt  7905b78f-6307-4905-b047-b4c8fc6a49a9.txt  9dac0832-7a7a-4218-90db-7d6fabb52e23.txt  a3796b83-6527-46d0-afa5-893ec4e3e9f6.txt  (+3 more)
.serena/: project.yml
configs/: default.yaml
core/bridge/c_src/: CMakeLists.txt  bridge.c  bridge.h
docs/: FINAL_DELIVERY_CONFIRMATION.md  PROJECT_COMPLETION_REPORT.md  REALITY_CHECK.md  strategic_review_2025_12_07.md  t003-s4-integration-results.md  todo_fix_completion_report.md
flutter_app/: pubspec.yaml
libs/: mihomo_core_linux_amd64.h
scripts/: build_all_platforms.sh  build_core_desktop.sh  build_core_mobile.sh  build_linux_test.sh  project_milestone_summary.sh  test_build_system.sh  test_config_parser.sh  test_t002_integration.sh  test_t003_integration.sh  test_t003_s4_real_integration.sh  test_t003_s4_real_integration_simple.sh  test_t003_s4_simple.sh  test_t004_integration.sh  verify_bridge_integrity.sh  verify_bundle_id_fix.sh  verify_config_panel.sh  verify_config_parser.sh  verify_flutter_bridge.sh
tests/: t004_s4_release_checklist.md
(+166 files in other folders)
